<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="430dp"
    app:cardCornerRadius="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCharacterImage"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            android:transitionName="@string/character_container"/>


        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/name_placeholder"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivCharacterImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ivCharacterImage"
            app:layout_constraintTop_toBottomOf="@+id/ivCharacterImage" />


        <HorizontalScrollView
            android:id="@+id/linearLayoutCompat"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:scrollIndicators="none"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrigin"
                    style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="0dp"
                    android:enabled="false"
                    android:text="@string/funny_placeholder"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLocation"
                    style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="5dp"
                    android:enabled="false"
                    android:text="@string/weird_placeholder"
                    android:textAlignment="center"
                    android:textSize="11sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipType"
                    style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="5dp"
                    android:enabled="false"
                    android:text="@string/interesting_placeholder"
                    android:textAlignment="center"
                    android:textSize="11sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>






    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>